<resources>
    <string name="app_name">KuTear</string>
    <string name="user">KuTear</string>
    <string name="login">登陆</string>
    <string name="openDrawer">打开</string>
    <string name="closeDrawer">关闭</string>
    <string name="username">用户名</string>
    <string name="article_content">文章内容</string>
    <string name="pager_content">文章内容</string>
    <string name="password">密码</string>
    <string name="login_forget_password">忘记密码?</string>
    <string name="tips_not_support_find_password">暂时不支持找回密码</string>
    <string name="menu_string_archive">归档</string>
    <string name="menu_string_main">主页</string>
    <string name="menu_string_manager">管理</string>
    <string name="menu_string_tab">标签</string>
    <string name="menu_string_category">分类</string>
    <string name="menu_string_about">关于</string>
    <string name="menu_string_setting">设置</string>
    <string name="username_or_password_is_error">用户名或密码错误</string>
    <string name="username_not_null">用户名不能为空</string>
    <string name="password_not_null">密码不能为空</string>
    <string name="web_title">KuTear</string>
    <string name="login_success">登陆成功</string>
    <string name="login_succeed">已经登陆了</string>
    <string name="web_login_title">登录到</string>
    <string name="web_admin_title">网站概要</string>
    <string name="web_form_attribute">action</string>
    <string name="get_url_failed">获取登录链接失败</string>
    <string name="article_title">文章标题</string>
    <string name="pager_title">页面标题</string>
    <string name="article_edit_fragment_title">编辑文章</string>
    <string name="article_preview_fragment_title">文章预览</string>
    <string name="pager_preview_fragment_title">页面预览</string>
    <string name="no_more_article">没有更多文章</string>
    <string name="share">分享</string>
    <string name="open_in_brown">在浏览器中打开</string>
    <string name="can_not_find_archive_list">找不到归档列表</string>
    <string name="can_not_get_category_info">不能获取到分类</string>
    <string name="can_not_read_tab_list">不能读取标签列表</string>
    <string name="get_user_info_error">获取用户信息失败</string>
    <string name="main_pager">主页</string>
    <string name="email">邮箱</string>
    <string name="nickname">昵称</string>
    <string name="get_about_info_error">获取信息失败</string>
    <string name="site_name">站点名称</string>
    <string name="site_address">站点地址</string>
    <string name="site_description">站点描述</string>
    <string name="site_keyword">关键词</string>
    <string name="site_allow_register">允许注册</string>
    <string name="can_not_get_site_info">获取站点信息失败</string>
    <string name="submit">提交</string>
    <string name="not_login">没有登陆</string>
    <string name="other">其他</string>
    <string name="can_not_web_admin">访问后台失败</string>
    <string name="article_date_format">文章日期格式</string>
    <string name="article_list_count">文章列表数目</string>
    <string name="each_pager_article_count">每页文章数目</string>
    <string name="date_format_tips">日期格式说明</string>
    <string name="category_path">分类路径</string>
    <string name="pager_path">页面路径</string>
    <string name="article_path">文章链接</string>
    <string name="get_category_error">获取分类失败</string>
    <string name="no_more_data">没有新数据啦</string>
    <string name="login_ing">登录中...</string>
    <string name="loading">加载中...</string>
    <string name="back_up">返回上级</string>
    <string name="category_name">分类名称</string>
    <string name="category_simple_name">分类缩写</string>
    <array name="manager_title">
        <item>站点管理</item>
        <item>阅读设置</item>
        <item>链接设置</item>
        <item>管理分类</item>
        <item>独立页面</item>
        <item>管理文章</item>
    </array>
    <array name="category_option">
        <item>删除</item>
        <item>修改</item>
        <item>取消</item>
    </array>

    <string name="can_not_get_content">没有获取到内容</string>
    <string name="post_article">发布文章</string>
    <string name="post_pager">发布页面</string>
    <string name="get_url_error">获取链接失败</string>
    <string name="save_to_server_fail">保存失败</string>
    <string name="article_title_can_not_be_empty">文章标题不可为空</string>
    <string name="article_posting">文章发布中</string>
    <string name="pager_posting">页面发布中</string>
    <string name="pager_edit">页面编辑</string>
    <string name="failed_to_load_image">加载图片失败</string>
    <string name="failed_to_upload">上传失败</string>
    <string name="insert_img">插入图片</string>
    <string name="please_choose_from_album">请在相册中选择</string>
    <string name="edit_link_name">编辑链接名称</string>
    <string name="image_preview">图片预览</string>
    <string name="save_to_sd">保存到SD卡</string>
    <string name="save_image_to_sd">图片保存到:</string>
    <string name="network_error">网络错误</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setting">设置</string>
</resources>
