<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_archive"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/menu_string_archive" />
        <item
            android:id="@+id/menu_tab"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/menu_string_tab" />
        <item
            android:id="@+id/menu_category"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/menu_string_category" />
        <item
            android:id="@+id/menu_about"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/menu_string_about" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_setting"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/menu_string_setting" />
    </group>
</menu>