<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/ui_bottom_margin"
        android:layout_marginLeft="@dimen/ui_activity_horizontal_margin"
        android:layout_marginRight="@dimen/ui_activity_horizontal_margin"
        android:layout_marginTop="@dimen/ui_top_margin"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_til_username_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ui_activity_vertical_margin">

            <EditText
                android:id="@+id/login_et_username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:inputType="textPersonName|textCapWords" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_til_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ui_activity_vertical_margin">

            <EditText
                android:id="@+id/login_et_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/ui_bottom_margin"
        android:layout_marginLeft="@dimen/ui_activity_horizontal_margin"
        android:layout_marginRight="@dimen/ui_activity_horizontal_margin"
        android:layout_marginTop="@dimen/ui_top_margin"
        android:orientation="vertical">

        <Button
            android:id="@+id/login_btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/drawable_login_button_btn"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_login_btn_size" />

        <TextView
            android:id="@+id/login_tv_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ui_top_margin"
            android:text="@string/login_forget_password"
            android:textColor="@color/teal_500" />
    </LinearLayout>
</LinearLayout>
