<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/ui_bottom_margin">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/manager_category_title_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ui_activity_vertical_margin">

            <EditText
                android:id="@+id/manager_category_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/category_name"
                android:inputType="textUri" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/manager_category_simple_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ui_activity_vertical_margin">

            <EditText
                android:id="@+id/manager_category_simple"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/category_simple_name"
                android:inputType="textUri" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/manager_category_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ui_activity_vertical_margin"
            android:background="@drawable/drawable_login_button_btn"
            android:text="@string/submit"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_login_btn_size" />
    </LinearLayout>
</ScrollView>